--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,4 +2,5 @@
   <li><%= link_to 'Home', root_path %></li>
   <li><%= link_to 'About', page_path('about') %></li>
   <li><%= link_to 'Contact', page_path('contact') %></li>
+  <%= render 'layouts/navigation_links' %>
 </ul>
